@@ -77,7 +77,7 @@ are configured.")
 (defvar org-enable-verb-support nil
   "If non-nil, Verb (https://github.com/federicotdn/verb) is configured.")
 
-(defvar org-enable-roam-support nil
+(defvar org-enable-roam-support (when org-enable-roam-server t)
   "If non-nil, org-roam (https://www.orgroam.com/) is configured")
 
 (defvar org-persp-startup-org-file nil
@@ -92,3 +92,6 @@ ATTENTION: `valign-mode' will be laggy working with tables contain more than 100
 
 (defvar org-enable-appear-support nil
   "If non-nil, enable org-appear in org-mode buffers.")
+
+(defvar org-enable-roam-server nil
+  "if non-nil, enable org-roam-server support")
